[package]
name = "feanor-math-hexl"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["rlib"]
bench = true

[dependencies]
cpp = "0.5.9"
feanor-math = { git = "https://github.com/feanortheelf/feanor-math.git", features = ["unstable-enable"] }

[build-dependencies]
cpp_build = "0.5.9"
